--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "highlight.js": "^10.1.2",
+    "quill": "^2.0.0-dev.3",
+    "quill-image-extend-module": "^1.1.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
